gcc/testsuite/rust/rustc/ui/issues/issue-6458-3.rs
use std::mem;

fn main() {
    mem::transmute(0);
// { dg-error ".E0282." "" { target *-*-* } .-1 }
}

